set(LIB_SRC libheap.cpp)
add_library(heap SHARED ${LIB_SRC})
set(LIB_SRC libmerge.cpp)
add_library(merge SHARED ${LIB_SRC})
set(LIB_SRC libqsort.cpp)
add_library(qsort SHARED ${LIB_SRC})
set(LIB_SRC libbubble.cpp)
add_library(bubble SHARED ${LIB_SRC})
set(LIB_SRC libshell.cpp)
add_library(shell SHARED ${LIB_SRC})
set(LIB_SRC libradix.cpp)
add_library(radix SHARED ${LIB_SRC})
set(LIB_SRC libselection.cpp)
add_library(selection SHARED ${LIB_SRC})
set(LIB_SRC libinsertion.cpp)
add_library(insertion SHARED ${LIB_SRC})
set(LIB_SRC libqsort3way.cpp)
add_library(qsort3way SHARED ${LIB_SRC})
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)